--- a/package.json
+++ b/package.json
@@ -2,12 +2,7 @@
   "name": "myfirstapp",
   "version": "0.1.0",
   "private": true,
-  "proxy": {
-  "/": {
-    "target": "http://localhost:5000",
-    "changeOrigin": true
-  }
-},
+  "proxy": "https://quick-back.onrender.com",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
