--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "myfirstapp",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://quick-back.onrender.com",
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
